Bug 296693 - Wrong context menu position
Summary: Wrong context menu position
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 298176 302759 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-24 17:37 UTC by razrfalcon
Modified: 2012-07-04 01:17 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
Context menu appears always in the same position (81.34 KB, image/png)
2012-03-24 17:37 UTC, razrfalcon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description razrfalcon 2012-03-24 17:37:58 UTC
Created attachment 69860 [details]
Context menu appears always in the same position

If I click on item in the tree by right mouse button - context menu appears in wrong position of the screen.
Example in attachment.
Comment 1 Christoph Feck 2012-03-25 00:14:20 UTC
Do you use Qt 4.8?
Comment 2 razrfalcon 2012-03-25 04:39:54 UTC
Yes.
4.8.0-r3 (in Gentoo ~amd64)
Comment 3 Christoph Feck 2012-04-16 00:03:03 UTC
*** Bug 298176 has been marked as a duplicate of this bug. ***
Comment 4 Yaroslav Sidlovsky 2012-05-23 10:02:38 UTC
This bug also affects me.
Some information about my system: openSUSE-12.1 x64, KDE SC v.4.8.3, Qt v.4.8.1.
Comment 5 Nico Roeser 2012-06-04 07:06:40 UTC
I have two monitors connected to my computer, and the context menu appears on the wrong screen.

Version of Qt packages is 4:4.8.1-0ubuntu4.1 on Kubuntu 12.04 LTS.
Comment 6 Christoph Feck 2012-06-29 19:42:16 UTC
*** Bug 302759 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2012-07-04 01:17:17 UTC
Git commit e7a2cb06603e2ea743d039073b8f5122287631d5 by Christoph Feck.
Committed on 04/07/2012 at 03:16.
Pushed by cfeck into branch 'KDE/4.9'.

Use correct context menu event position
FIXED-IN: 4.9

M  +1    -1    kmenuedit/treeview.cpp

http://commits.kde.org/kde-workspace/e7a2cb06603e2ea743d039073b8f5122287631d5