Use correct context menu event position

BUG: 296693
FIXED-IN: 4.9